atualização hoteis ,quartos